Bug 41654 - Fix one more notImplemented in h1-h6 start tag handling
Summary: Fix one more notImplemented in h1-h6 start tag handling
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Eric Seidel (no email)
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-05 23:11 PDT by Eric Seidel (no email)
Modified: 2010-07-05 23:14 PDT (History)
1 user (show)

See Also:


Attachments
Patch (3.21 KB, patch)
2010-07-05 23:12 PDT, Eric Seidel (no email)
abarth: review+
abarth: commit-queue+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Seidel (no email) 2010-07-05 23:11:09 PDT
Fix one more notImplemented in h1-h6 start tag handling
Comment 1 Eric Seidel (no email) 2010-07-05 23:12:25 PDT
Created attachment 60589 [details]
Patch
Comment 2 Adam Barth 2010-07-05 23:13:42 PDT
Comment on attachment 60589 [details]
Patch

I hate you.
Comment 3 Eric Seidel (no email) 2010-07-05 23:14:51 PDT
Committed r62525: <http://trac.webkit.org/changeset/62525>