2010-07-05  Eric Seidel  <eric@webkit.org>

Reviewed by Adam Barth.

        Fix one more notImplemented in h1-h6 start tag handling
        https://bugs.webkit.org/show_bug.cgi?id=41654

        * html5lib/runner-expected-html5.txt:
         - Fix two sub-tests!
2010-07-05  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Fix one more notImplemented in h1-h6 start tag handling
        https://bugs.webkit.org/show_bug.cgi?id=41654

        * html/HTMLTreeBuilder.cpp:
        (WebCore::HTMLTreeBuilder::processStartTag):

git-svn-id: svn://svn.chromium.org/blink/trunk@62525 bbb929c8-8fbe-4397-9dbb-9b2b20218538