third_party/WebKit/WebCore/html/HTMLTreeBuilder.cpp
@@ -626,7 +626,10 @@ void HTMLTreeBuilder::processStartTag(AtomicHTMLToken& token)
         }
         if (isNumberedHeaderTag(token.name())) {
             processFakePEndTagIfPInScope();
-            notImplemented();
+            if (isNumberedHeaderTag(currentElement()->localName())) {
+                parseError(token);
+                m_openElements.pop();
+            }
             insertElement(token);
             return;
         }
